# networkx_algo_common_subtree

./: .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.rst  benchmark_backend_speed.py  build_wheels.sh  pyproject.toml  run_doctests.sh  run_tests.py  setup.py
.github/workflows/: test_binaries.yml  tests.yml
dev/: ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  secrets_configuration.sh  setup_secrets.sh
docs/source/: conf.py
examples/: path_correspondence.py
networkx_algo_common_subtree/: CMakeLists.txt  __init__.py  _autojit.py  balanced_embedding.py  balanced_embedding_cython.pyx  balanced_embedding_cython_alt.pyx  balanced_isomorphism.py  balanced_isomorphism_cython_alt.pyx  tree_embedding.py  tree_isomorphism.py  utils.py
networkx_algo_common_subtree/c/: balanced_embedding_c.c
requirements/: build.txt  runtime.txt  tests.txt
tests/: test_import.py  test_input_validation.py  test_tree_embedding.py
