option(BUILD_CPU_FEATURE "A Cython CPU Feature" True)
if (BUILD_CPU_FEATURE)
  cpu_cython_module("balanced_embedding_cython.pyx" "balanced_embedding_cython")
  cpu_cython_module("balanced_isomorphism_cython.pyx" "balanced_isomorphism_cython")
  cpu_cython_module("balanced_embedding_cython_orig.pyx" "balanced_embedding_cython_orig")
  cpu_cython_module("balanced_isomorphism_cython_orig.pyx" "balanced_isomorphism_cython_orig")
  cpu_cython_module("balanced_embedding_cython_alt.pyx" "balanced_embedding_cython_alt")
  cpu_cython_module("balanced_isomorphism_cython_alt.pyx" "balanced_isomorphism_cython_alt")
endif()
